# libplatform

./: CMakeLists.txt  LICENSE  README.md  libc++_calls.txt
libc/c/: libc.h
libc/src/: libc.cc
libplatform/platform/: platform.h  types.h
libplatform/src/: apple64.cc  crt.S  crt.cc  linux64.cc  platform.cc  platform_internal.h  win64.cc
libplatform/tests/: test_platform.cc
